--- a/blumontwallet/package.json
+++ b/blumontwallet/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,13 +14,24 @@
     "@web3auth/base": "^3.0.0",
     "@web3auth/modal": "^3.0.3",
     "@web3auth/openlogin-adapter": "^3.0.3",
+    "@web3auth/web3auth": "^2.1.3",
     "@web3auth/web3auth-wagmi-connector": "^1.0.0",
+    "assert": "^2.0.0",
+    "cipher-base": "^1.0.4",
+    "crypto-browserify": "^3.12.0",
+    "firebase": "^9.15.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-moralis": "^1.4.2",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.9.4",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.0"
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
