--- a/blumontwallet/package.json
+++ b/blumontwallet/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@firebase/app": "^0.9.0",
+    "@metamask/obs-store": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,8 +20,12 @@
     "assert": "^2.0.0",
     "cipher-base": "^1.0.4",
     "crypto-browserify": "^3.12.0",
+    "eccrypto": "^1.1.6",
     "firebase": "^9.15.0",
     "https-browserify": "^1.0.0",
+    "install": "^0.13.0",
+    "metamask-react": "^2.4.1",
+    "moralis-v1": "^1.12.0",
     "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,11 +39,11 @@
     "web3": "^1.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
-  },
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -56,5 +61,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1"
   }
 }
