--- a/blumontwallet/package.json
+++ b/blumontwallet/package.json
@@ -1,48 +1,28 @@
 {
-  "name": "gpt2",
+  "name": "firebase-react-core",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@firebase/app": "^0.9.0",
+    "@solana/web3.js": "^1.73.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@web3auth/base": "^3.0.0",
-    "@web3auth/core": "^4.2.2",
-    "@web3auth/modal": "^3.0.3",
-    "@web3auth/openlogin-adapter": "^4.2.2",
-    "@web3auth/web3auth-wagmi-connector": "^1.0.0",
-    "assert": "^2.0.0",
-    "bootstrap": "^5.2.3",
-    "cipher-base": "^1.0.4",
-    "crypto-browserify": "^3.12.0",
+    "@web3auth/base": "^4.0.0",
+    "@web3auth/core": "^4.0.0",
+    "@web3auth/ethereum-provider": "^4.1.1",
+    "@web3auth/openlogin-adapter": "^4.2.0",
+    "ethers": "^5.7.2",
     "firebase": "^9.15.0",
-    "firebase-tools": "^11.20.0",
-    "https-browserify": "^1.0.0",
-    "moralis-v1": "^1.12.0",
-    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-moralis": "^1.4.2",
     "react-scripts": "5.0.1",
-    "react-web3-auth": "^0.2.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
     "typescript": "^4.9.4",
-    "url": "^0.11.0",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.7.0",
-    "web3-react": "^5.0.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "web-vitals": "^3.1.0",
+    "web3": "^1.8.1"
   },
   "eslintConfig": {
     "extends": [
@@ -52,14 +32,36 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "chrome >= 67",
+      "edge >= 79",
+      "firefox >= 68",
+      "opera >= 54",
+      "safari >= 14"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "lint-staged": "^13.1.0",
+    "os-browserify": "^0.3.0",
+    "prettier": "^2.8.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
+  },
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   }
 }
